wordpress-cloudql-gke-ingress/8-Ingress.yaml
## Deploy Ingress ##
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "wordpress-ip"
    kubernetes.io/ingress.allow-http: "true"
    networking.gke.io/managed-certificates: "wordpress-goinit-ssl-cert"
    networking.gke.io/v1beta1.FrontendConfig: "wordpress-frontendconfig"
spec:
  rules:
    - host: wordpress.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress-service
                port:
                  number: 80
